完善物品抓取

--- a/代码/APP/app/src/main/res/values/strings.xml
+++ b/代码/APP/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ROSControl</string>
+    <string name="select_type">Select a type</string>
+    <string name="select_val">Select a value</string>
 </resources>
